# bob

./: .gitignore  .rumdl.toml  AGENTS.md  Cargo.toml  Justfile  LICENSE.md  README.md  agent.toml  cliff.toml  context7.json
.github/workflows/: release.yml
.opencode/skills/pb-build/: SKILL.md
.opencode/skills/pb-init/: SKILL.md
.opencode/skills/pb-plan/: SKILL.md
.opencode/skills/pb-refine/: SKILL.md
crates/bob-adapters/: Cargo.toml  README.md
crates/bob-adapters/src/: access_control.rs  approval_static.rs  artifact_file.rs  artifact_memory.rs  builtin_tools.rs  checkpoint_file.rs  checkpoint_memory.rs  cost_file.rs  cost_simple.rs  journal_file.rs  journal_memory.rs  lib.rs  llm_genai.rs  llm_liter.rs  mcp_rmcp.rs  observe.rs  observe_otel.rs  openai_schema.rs  policy_static.rs  provider_router.rs  resilient_llm.rs  resilient_tool.rs  skills_agent.rs  store_file.rs  store_memory.rs  tape_memory.rs
crates/bob-chat/: Cargo.toml  README.md
crates/bob-chat/src/: adapter.rs  bot.rs  card.rs  emoji.rs  error.rs  event.rs  file.rs  lib.rs  message.rs  modal.rs  state.rs  stream.rs  test_utils.rs  thread.rs
crates/bob-chat/tests/: bot_lifecycle.rs
crates/bob-core/: Cargo.toml  README.md
crates/bob-core/src/: channel.rs  character.rs  context_trimmer.rs  error.rs  error_classifier.rs  instrumenter.rs  journal.rs  lib.rs  native.rs  ports.rs  resilience.rs  secrets.rs  tape.rs  tool_policy.rs  typed_tool.rs  types.rs
crates/bob-runtime/: Cargo.toml  README.md
crates/bob-runtime/src/: action.rs  agent_loop.rs  classifier.rs  composite.rs  lib.rs  memory_context.rs  message_bus.rs  output_validation.rs  progressive_tools.rs  prompt.rs  router.rs  scheduler.rs  session.rs  subagent.rs  tooling.rs  tower_service.rs  typed_builder.rs  typestate.rs
crates/bob-skills/: Cargo.toml
crates/bob-skills/src/: compose.rs  error.rs  lib.rs  loader.rs  registry.rs  selector.rs  store.rs  types.rs
crates/bob-skills/src/parsing/: allowed_tools.rs  compatibility.rs  description.rs  error.rs  frontmatter.rs  loader.rs  metadata.rs  mod.rs  name.rs  skill.rs
docs/: design.md
docs/plans/: 2026-02-27-hexagonal-phase1.md  2026-02-28-hexagonal-phase2.md  2026-03-06-context-compactor-tool-calling-design.md  2026-03-06-context-compactor-tool-calling.md  2026-03-06-runtime-dx-hooks-design.md  2026-03-06-runtime-dx-hooks.md
specs/2026-02-19-01-design-review-refine/: design.md  tasks.md
specs/2026-02-19-02-implement-v1-agent-loop/: design.md  tasks.md
specs/2026-03-03-01-bob-chat-channels/: design.md  tasks.md
