[package]
name = "bob-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Adapter implementations for Bob Agent Framework ports"
keywords = ["agent", "ai", "adapter", "genai", "mcp"]
categories = ["development-tools", "asynchronous", "api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/bob-adapters"

[features]
default = ["llm-genai", "mcp-rmcp", "skills-agent", "observe-tracing"]
llm-genai = ["dep:genai"]
mcp-rmcp = ["dep:rmcp"]
observe-tracing = ["dep:tracing"]
skills-agent = ["dep:agent-skills"]
store-memory = []

[dependencies]
async-trait = { workspace = true }
bob-core = { workspace = true }
futures-util = { workspace = true }
scc = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# Feature-gated
agent-skills = { workspace = true, optional = true }
genai = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
