[package]
name = "bob-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Adapter implementations for Bob Agent Framework ports"
keywords = ["agent", "ai", "adapter", "genai", "mcp"]
categories = ["development-tools", "asynchronous", "api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/bob-adapters"

[features]
default = ["llm-genai", "mcp-rmcp", "skills-agent", "observe-tracing"]
llm-genai = ["dep:genai"]
mcp-rmcp = [
    "dep:rmcp",
    "rmcp/client",
    "rmcp/transport-child-process",
    "tokio/process",
]
observe-otel = [
    "dep:tracing",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
]
observe-tracing = ["dep:tracing"]
skills-agent = ["dep:bob-skills"]
store-memory = []
tracing-subscriber = ["dep:tracing-subscriber"]

[dependencies]
async-trait = { workspace = true }
bob-core = { workspace = true }
futures-util = { workspace = true }
scc = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }

# Feature-gated
bob-skills = { workspace = true, optional = true }
genai = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
