[package]
name = "bob-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Chat channel types and streaming abstractions for Bob Agent Framework"
keywords = ["agent", "ai", "llm", "chat", "streaming"]
categories = ["development-tools", "asynchronous"]
readme = "README.md"
documentation = "https://docs.rs/bob-chat"

[dependencies]
async-trait.workspace = true
bob-core.workspace = true
bytes.workspace = true
futures-core.workspace = true
futures-util.workspace = true
scc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
async-stream = "0.3.6"
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
