[package]
name = "bob-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
futures-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
