[package]
name = "bob-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
bob-core = { path = "../bob-core" }
futures-util = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
