[package]
name = "bob-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Runtime orchestration layer for Bob Agent Framework"
keywords = ["agent", "ai", "runtime", "orchestration", "scheduler"]
categories = ["development-tools", "asynchronous"]
readme = "README.md"
documentation = "https://docs.rs/bob-runtime"

[dependencies]
async-trait = { workspace = true }
bob-core = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
