[package]
name = "bob-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Skill management, discovery, selection, and prompt composition for the Bob Agent Framework"
keywords = ["agent", "skills", "ai", "llm", "automation"]
categories = ["config", "filesystem"]

[dependencies]
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yml = "0.0.12"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
