[package]
name = "bob-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Skill management, discovery, selection, and prompt composition for the Bob Agent Framework"
keywords = ["agent", "skills", "ai", "llm", "automation"]
categories = ["config", "filesystem"]

[dependencies]
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yml = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
